--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,9 +1,9 @@
 name: Generate 3D Contribution Graph
 
 on:
-  schedule: # chạy mỗi ngày
+  schedule: # chạy hằng ngày lúc 0h
     - cron: "0 0 * * *"
-  workflow_dispatch:
+  workflow_dispatch: # cho phép chạy tay
 
 jobs:
   build:
@@ -11,6 +11,13 @@ jobs:
     name: generate-github-profile-3d-contrib
     steps:
       - uses: actions/checkout@v2
-      - uses: yoshi389111/github-profile-3d-contrib@0.6.0
+      - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit & Push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A .
+          git commit -m "generated"
+          git push
